--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -14,7 +14,7 @@ const title = `Error 404`;
           <span class="text-primary">404</span>
         </h2>
         <p class="text-3xl font-semibold md:text-3xl">Página no encontrada.</p>
-        <p class="mt-4 mb-8 text-lg text-muted dark:text-slate-400">
+        <p class="mt-4 mb-8 text-lg text-muted ">
           
         </p>
         <a rel="noopener noreferrer" href={getHomePermalink()} class="btn ml-4">Back to homepage</a>
