--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -34,7 +34,7 @@ let datosContacto = await getContact()
 
 <Layout >
   <div class="max-w-6xl m-auto">
-    <h1 class="text-3xl m-2 lg:my-12 lg:text-6xl font-bold">{contacto[lenguaje]}</h1>
+    <h1 class="text-3xl m-2 lg:my-12 lg:text-6xl ">{contacto[lenguaje]}</h1>
     <hr class=" mx-6 mt-8 mb-2">
     <div class=" mx-2 text-xl">
       <p>{datosContacto.texto[lenguaje]}</p>
