--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,7 +47,7 @@ const meta = {
 
   <div class="min-h-[81vh]  ">
     <div class="max-w-6xl m-auto hidden lg:block">
-      <h1 class="text-3xl m-2 lg:my-12 lg:text-6xl font-bold">{ about?.nombre  }</h1>
+      <h1 class="text-3xl m-2 lg:my-12 lg:text-6xl ">{ about?.nombre  }</h1>
       <div class="lg:flex gap-12 p-6 ">
         
         <div class="lg:w-1/2 flex flex-col justify-between">
@@ -65,7 +65,7 @@ const meta = {
       <img src={urlForImage(about?.imagen).url()} alt="amalia llamas" class="w-[90%] my-6 mx-auto object-cover max-h-[250px] rounded-lg">
       
       <div class="lg:flex gap-12 p-6 ">
-        <h1 class="text-3xl m-2 lg:my-12 lg:text-6xl font-bold">{ about?.nombre }</h1>
+        <h1 class="text-3xl m-2 lg:my-12 lg:text-6xl ">{ about?.nombre }</h1>
         <div class="lg:w-1/2 m-2 flex flex-col justify-between">
           { about?.descripcion[lenguaje]  }
           <div class="self-center mt-6 flex gap-2">
