--- a/src/pages/obras.astro
+++ b/src/pages/obras.astro
@@ -64,7 +64,7 @@ const añoSeleccionado = 0
             return (
               <div class={'obra'} data-año={obra.anio}>
                 <img src={urlForImage(obra.imagen).url()} loading="lazy" alt="" class="w-full max-h-[400px]" >
-                <h3 class="text-lg font-bold">{obra.nombre[lenguaje]}</h3>
+                <h3 class="text-lg ">{obra.nombre[lenguaje]}</h3>
                 <p class="">{obra.descripcion[lenguaje]}</p>
                 <hr class=" border-gray-700 my-3">
               </div>
