--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -71,7 +71,7 @@ const {
           links.map(({ text, href, links }) => (
             <li>
               <a
-                class="font-medium hover:text-gray-900  px-4 py-3 flex items-center transition duration-150 ease-in-out"
+                class=" hover:text-gray-900  px-4 py-3 flex items-center transition duration-150 ease-in-out"
                 href={localePath(href)}
               >
                 {text[lenguaje]}
@@ -81,7 +81,7 @@ const {
         }
           <li class="lg:self-center">
             <a
-              class="font-medium hover:text-gray-900 text-xs   px-2 border-r lg:border-black my-3 flex items-center transition duration-150 ease-in-out"
+              class=" hover:text-gray-900 text-xs   px-2 border-r lg:border-black my-3 flex items-center transition duration-150 ease-in-out"
               href={Astro.url.pathname + '?lang=en'}
               >
               ENGLISH
@@ -89,7 +89,7 @@ const {
           </li>
           <li class="lg:self-center">
             <a
-              class="font-medium hover:text-gray-900 text-xs   px-2 my-3 flex items-center transition duration-150 ease-in-out"
+              class=" hover:text-gray-900 text-xs   px-2 my-3 flex items-center transition duration-150 ease-in-out"
               href={Astro.url.pathname + '?lang=es'}
             >
               ESPAÑOL
