--- a/src/pages/obras.astro
+++ b/src/pages/obras.astro
@@ -45,9 +45,10 @@ const añoSeleccionado = 0
 
 <Layout >
   <div class="max-w-6xl m-auto">
-    <h1 class="text-3xl m-2 lg:my-12 lg:text-6xl ">{obras[lenguaje]}</h1>
-    <div class="lg:flex gap-24 mx-2">
-      <div>
+    <h1 class="text-3xl m-2 lg:my-6 lg:text-6xl ">{obras[lenguaje]}</h1>
+    <hr class=" border-gray-700 mb-3 opacity-40">
+    <div class="lg:flex gap-24 mx-2 ">
+      <div class="mt-20">
         <div class="sticky top-24">
           {
             años.map((año) => {
