--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -33,8 +33,8 @@ let datosContacto = await getContact()
 
 
 <Layout >
-  <div class="max-w-6xl m-auto">
-    <h1 class="text-3xl m-2 lg:my-12 lg:text-6xl ">{contacto[lenguaje]}</h1>
+  <div class="mx-3 m-auto">
+    <h1 class="text-3xl m-2 lg:my-6 lg:text-4xl ">{contacto[lenguaje]}</h1>
     <hr class=" mx-6 mt-8 mb-2">
     <div class=" mx-2 text-xl">
       <p>{datosContacto.texto[lenguaje]}</p>
