--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,7 +47,7 @@ const meta = {
 
   <div class="min-h-[81vh]  ">
     <div class="max-w-6xl m-auto hidden lg:block">
-      <h1 class="text-3xl m-2 lg:my-12 lg:text-6xl ">{ about?.nombre  }</h1>
+      <h1 class="text-3xl m-2 lg:my-12 lg:text-4xl ">{ about?.nombre  }</h1>
       <div class="lg:flex gap-12 p-6 ">
         
         <div class="lg:w-1/2 flex flex-col justify-between">
@@ -58,7 +58,7 @@ const meta = {
       </div>
       
     </div>
-    <div class="max-w-6xl m-auto block lg:hidden">
+    <div class="mx-3 m-auto block lg:hidden">
       <img src={urlForImage(about?.imagen).url()} alt="amalia llamas" class="w-[90%] my-6 mx-auto object-cover max-h-[250px] rounded-lg">
       
       <div class="lg:flex gap-12 p-6 ">
