--- a/src/pages/obras.astro
+++ b/src/pages/obras.astro
@@ -44,14 +44,14 @@ const añoSeleccionado = 0
 
 
 <Layout >
-  <div class="max-w-6xl m-auto">
-    <h1 class="text-3xl m-2 lg:my-6 lg:text-6xl ">{obras[lenguaje]}</h1>
+  <div class="mx-8 m-auto">
+    <h1 class="text-3xl m-2 lg:my-6 lg:text-4xl ">{obras[lenguaje]}</h1>
     <hr class=" border-gray-700 mb-3 opacity-40">
     <div class="lg:flex gap-24 mx-2 ">
       <div class="lg:mt-20">
         <div class="sticky top-24">
           {
-            años.map((año) => {
+            años.map((año, index) => {
               return (
                 <button class="block hover:underline botonAño" value={año}> {año} </button>
               )
@@ -96,7 +96,11 @@ buttons.forEach((button) => {
 
 function cambiarAñoSeleccionado(año) {
   const obras = document.querySelectorAll('.obra')
-  obras.forEach((obra) => {
+
+  
+
+  obras.forEach((button, obra) => {
+
     if(obra.dataset.año == año ) {
       obra.classList.add('block')
       obra.classList.remove('hidden')
