--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,7 +47,9 @@ const meta = {
 
   <div class="min-h-[81vh]  ">
     <div class="max-w-6xl m-auto hidden lg:block">
-      <h1 class="text-3xl m-2 lg:my-12 lg:text-4xl ">{ about?.nombre  }</h1>
+      <h1 class="text-3xl m-2 lg:my-6 lg:text-4xl ">{ about?.nombre  }</h1>
+      <hr class=" border-gray-700 mb-3 opacity-40">
+
       <div class="lg:flex gap-12 p-6 ">
         
         <div class="lg:w-1/2 flex flex-col justify-between">
